// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render \`leak\` view correctly 1`] = `
<div>
  <div
    className="projects-facets-header clearfix"
  >
    <h3>
      filters
    </h3>
  </div>
  <QualityGateFilter
    onQueryChange={[Function]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <NewReliabilityFilter
    key="new_reliability"
    onQueryChange={[Function]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <NewSecurityFilter
    key="new_security"
    onQueryChange={[Function]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <NewMaintainabilityFilter
    key="new_maintainability"
    onQueryChange={[Function]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <NewCoverageFilter
    key="new_coverage"
    onQueryChange={[Function]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <NewDuplicationsFilter
    key="new_duplications"
    onQueryChange={[Function]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <NewLinesFilter
    key="new_lines"
    onQueryChange={[Function]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <Connect(LanguagesFilter)
    onQueryChange={[Function]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <TagsFilter
    onQueryChange={[Function]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
</div>
`;

exports[`should render correctly 1`] = `
<div>
  <div
    className="projects-facets-header clearfix"
  >
    <ClearAll
      onClearAll={[Function]}
    />
    <h3>
      filters
    </h3>
  </div>
  <QualityGateFilter
    onQueryChange={[Function]}
    query={
      Object {
        "size": "3",
      }
    }
  />
  <ReliabilityFilter
    key="reliability"
    onQueryChange={[Function]}
    query={
      Object {
        "size": "3",
      }
    }
  />
  <SecurityFilter
    key="security"
    onQueryChange={[Function]}
    query={
      Object {
        "size": "3",
      }
    }
  />
  <MaintainabilityFilter
    key="maintainability"
    onQueryChange={[Function]}
    query={
      Object {
        "size": "3",
      }
    }
  />
  <CoverageFilter
    key="coverage"
    onQueryChange={[Function]}
    query={
      Object {
        "size": "3",
      }
    }
  />
  <DuplicationsFilter
    key="duplications"
    onQueryChange={[Function]}
    query={
      Object {
        "size": "3",
      }
    }
  />
  <SizeFilter
    key="size"
    onQueryChange={[Function]}
    query={
      Object {
        "size": "3",
      }
    }
    value="3"
  />
  <Connect(LanguagesFilter)
    onQueryChange={[Function]}
    query={
      Object {
        "size": "3",
      }
    }
  />
  <TagsFilter
    onQueryChange={[Function]}
    query={
      Object {
        "size": "3",
      }
    }
  />
</div>
`;
